<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">一加壹</string>
    <string name="chat_top">置顶聊天</string>
    <string name="chat_delete">删除聊天</string>
    <string name="quit_chat_top">取消置顶</string>
    <string name="confirm">确定</string>
    <string name="account">用户名</string>
    <string name="password">密码</string>
    <string name="tab_home">首页</string>
    <string name="tab_schedule">日程</string>
    <string name="tab_message">消息</string>
    <string name="tab_workbench">工作台</string>
    <string name="tab_help">帮助</string>
    <string name="login_title">登录·即时通信</string>
    <string name="login_sub_title">体验群组聊天，音视频对话等 IM 功能</string>
    <string name="input_number">请输入手机号</string>
    <string name="input_verification">请输入短信验证码</string>
    <string name="verification_code">获取验证码</string>
    <string name="button_login">登录</string>
    <string name="password_login">密码登录</string>
    <string name="official_website">访问官网</string>
    <string name="debug_mode_summary">IM 账号直接登录界面，此只在 Debug 模式下显示</string>
    <string name="account_hint">手机号</string>
    <string name="account_pwd_hint">请输入登录密码</string>
    <string name="cancel">取消</string>
    <string name="weekNum">%s周</string>
    <string name="please_input_search_content">请输入搜索内容</string>
    <string name="book_title_yd">通讯录</string>
    <string name="book_title_info_yd">个人信息</string>
    <string name="profile">我</string>
    <string name="id">账号：%1$s</string>
    <string name="modify_user_icon">修改头像</string>
    <string name="modify_nick_name">修改昵称</string>
    <string name="modify_signature">修改个性签名</string>
    <string name="add_rule">加我为好友时</string>
    <string name="allow_type_allow_any">允许任何人</string>
    <string name="allow_type_deny_any">拒绝任何人</string>
    <string name="allow_type_need_confirm">需要验证</string>
    <string name="exit">退出登录</string>
    <string name="about_im">关于即时通信IM</string>
    <string name="push_setting_title">推送配置</string>
    <string name="weekly_home_title">周报</string>
    <string name="no_data">暂无数据</string>
    <string name="weekly_home_desc">一加壹想代表所有学生和家长和您说一句：辛苦啦~</string>
    <string name="weekly_student_tab">学生篇</string>
    <string name="weekly_teacher_tab">教师篇</string>
    <string name="weekly_homework_chart">作业图表</string>
    <string name="weekly_homework_data">作业数据</string>
    <string name="startTime_endTime">%s-%s</string>
    <string name="weekly_attend_desc">你的本周%s考勤%s异常记录</string>
    <string name="weekly_desc_name">本周%s考勤</string>
    <string name="weekly_school_desc">全校教职工每天%s考勤率</string>
    <string name="weekly_school_student_desc">全校学生每天%s出勤率</string>
    <string name="weekly_school_student_attend">全校各年级%s出勤率</string>
    <string name="operation_title">作业</string>
    <string name="operation_read_html"><b><font color='#909399'>已读 <font color="#2C8AFF"><b>%1$d</b></font>/<b>%2$d</b></font></b></string>
    <string name="operation_completed_html"><b><font color='#909399'>已完成 <font color="#2C8AFF"><b>%1$d</b></font>/<b>%2$d</b></font></b></string>
    <string name="meeting_create_title">创建会议</string>
    <string name="meeting_update_title">修改会议</string>
    <string name="meeting_title">会议</string>
    <string name="meeting_history_title">历史会议</string>
    <string name="meeting_please_input_time">请选择会议时间</string>
    <string name="tab_contact_tab_text">通讯录</string>
    <string name="tab_conversation_tab_text">消息</string>
    <string name="tab_profile_tab_text">我</string>
    <string name="tab_scenes_tab_text">直播</string>
    <string name="home_attendance">数据考勤</string>
    <string name="add_friend">添加好友</string>
    <string name="add_group">添加群聊</string>
    <string name="start_conversation">发起会话</string>
    <string name="create_group_chat">创建群聊</string>
    <string name="create_chat_room">创建聊天室</string>
    <string name="create_private_group">创建讨论组</string>
    <string name="hint_add_user_id">请输入ID</string>
    <string name="hint_add_wording">请输入验证消息</string>
    <string name="contact_add">添加</string>
    <string name="user_id">对方ID</string>
    <string name="add_wording">验证消息</string>
    <string name="tips_empty_group_member">请选择群成员</string>
    <string name="tips_empty_group_type">请选择加群方式</string>
    <string name="no_friend_apply">暂无好友申请</string>
    <string name="newestVersion">已经是最新版本</string>
    <string name="forget">忘记密码？</string>
    <string name="request_agree">同意</string>
    <string name="request_accepted">已接受</string>
    <string name="request_waiting">等待验证</string>
    <string name="test_custom_action">自定义消息</string>
    <string name="test_custom_message">查看详情>></string>
    <string name="privacy_text">已同意《<a href="http://privacy.qq.com/">隐私政策</a>》</string>
    <string name="call_timeout">本次通话已超时</string>
    <string name="call_notification">音视频邀请消息通知</string>
    <string name="background_tip">当程序处于后台时新的来电消息会通过通知栏提醒用户</string>
    <string name="new_msg_notification">新普通消息通知</string>
    <string name="new_msg">收到一条新消息</string>
    <string name="call_nos">通话失去响应</string>
    <string name="you_app">您的应用</string>
    <string name="low_version"> 版本太低，不支持打开该离线消息</string>
    <string name="notice_release_obj_text">%s发布</string>
    <string name="ask_for_leave">请假</string>
    <string name="my_ask_for_leave">我要请假</string>
    <string name="leave_record">请假记录</string>
    <string name="approval_text">审批中</string>
    <string name="pass_text">审批通过</string>
    <string name="refuse_text">审批拒绝</string>
    <string name="repeal_text">已撤销</string>
    <string name="ask_for_leave_time">请假时间</string>
    <string name="start_time">开始时间</string>
    <string name="please_select">请选择</string>
    <string name="end_time">结束时间</string>
    <string name="choose_department">所选部门</string>
    <string name="commit">提交</string>
    <string name="according_course">按课程</string>
    <string name="according_date">按日期</string>
    <string name="detail">详情</string>
    <string name="repeal">撤销</string>
    <string name="agree">同意</string>
    <string name="refuse">拒绝</string>
    <string name="flow">流程</string>
    <string name="reason_for_leave">请假事由</string>
    <string name="to">至</string>
    <string name="in_department">所在部门</string>
    <string name="input_reason_for_leave">请输入请假事由</string>
    <string name="approver_required">审批人（必选）</string>
    <string name="copy_people">抄送人</string>
    <string name="date_for_leave">请假日期</string>
    <string name="section_for_leave">请假节次</string>
    <string name="check_all">全选</string>
    <string name="choose_class">所在班级</string>
    <string name="choose_student">请假人</string>
    <string name="carbon_copy_people">抄送人</string>
    <string name="select_carbon_copy_people">选择抄送人</string>
    <string name="carbon_copy_people_text">已抄送%s人</string>
    <string name="attendance_title">考勤</string>
    <string name="statistics_title">统计</string>
    <string name="attendance_time_text">考勤时间 %s</string>
    <string name="attendance_leave_time_text">离校时间 %s</string>
    <string name="attendance_punch_card_text">打卡时间：%s</string>
    <string name="attendance_late_text">迟到时间：%s</string>
    <string name="attendance_leave_text">早退时间：%s</string>
    <string name="attendance_ask_leave_text">请假时间：%s</string>
    <string name="attendance_time_format">%d次</string>
    <string name="month">%d月</string>
    <string name="week">%s - %s</string>
    <string name="attendance_event_desc"><b><font color="#FFFFFF" size="40px">%s</font><font color='#999999' size="20px">(人)</font></b></string>
    <string name="attendance_normal">正常</string>
    <string name="attendance_due">应到</string>
    <string name="attendance_late">迟到</string>
    <string name="attendance_leave_early">早退</string>
    <string name="attendance_no_sign_in">未签到</string>
    <string name="attendance_ask_for_leave">请假</string>
    <string name="attendance_node">%d节</string>
    <string name="attendance_bout">%d次</string>
    <string name="attendance_leave_time">请假时间</string>
    <string name="attendance_event_name">班牌考勤</string>
    <string name="attendance_class_section">第%s节</string>
    <string name="attendance_absence">缺勤</string>
    <string name="attendance_no_logout">未签退</string>
    <string name="attendance_no_clock_in">未打卡</string>
    <string name="attendance_sign_out_rate">签退率</string>
    <string name="attendance_rate">出勤率</string>
    <string name="attendance_sign_in_rate">出勤率</string>
    <string name="student_honor_count">%d荣誉</string>
    <string name="retract">\u3000\u3000%s</string>
    <string name="start_number_end_number">%d/%d</string>
    <string name="notice_announcement_title">通知公告</string>
    <string name="notice_release_title">发布通知</string>
    <string name="notice_un_confirm_title">未确认人员</string>
    <string name="notice_un_read_title">未读人员</string>
    <string name="notice_template_title">通知模板</string>
    <string name="notice_scope_title">通知范围</string>
    <string name="notice_confirm_detail_title">确认详情</string>
    <string name="notice_create_title">创建通知</string>
    <string name="notice_to_confirm">去确认</string>
    <string name="notice_tab_my_notice">我的通知</string>
    <string name="notice_tab_my_release">我的发布</string>
    <string name="notice_select_number">已选择(%d)</string>
    <string name="notice_send_obj">发送对象：%s</string>
    <string name="notice_confirm_number">（%d/%d）已确认</string>
    <string name="notice_confirm_number_text">已确认（%d/%d）</string>
    <string name="notice_scope_number_text">已选择(%d)</string>
    <string name="timed_send_text">%d小时%d分钟%d秒后发送</string>
    <string name="timed_send_long_text">%d天后发送</string>
    <string name="notice_my_push_title">我发布的通知</string>
    <string name="notice_confirm_count">已确认</string>
    <string name="notice_read_html"><b>%s ：<font color="#2C8AFF">%d</font><font color='#999999'>/%d</font></b></string>
    <string name="notice_has_withdrawn">已撤回</string>
    <string name="notice_have_read">已读</string>
    <string name="notice_have_been_confirmed">已确认</string>
    <string name="notice_to_withdrawn">撤回</string>
    <string name="notice_people">发布人</string>
    <string name="notice_push">发布</string>
    <string name="notice_timing_push">定时发布</string>
    <string name="notice_time">发布时间</string>
    <string name="notice_immediately_push">立即发布</string>
    <string name="notice_need_to_confirm">是否需要确认</string>
    <string name="notice_preview_title">预览</string>
    <string name="notice_release_time_title">发布时刻</string>
    <string name="notice_input_title_number">%d/30</string>
    <string name="notice_input_content_number">%d/2000</string>
    <string name="notice_timing_push_input">请选择定时发布时间</string>
    <string name="notice_chosen_people_number">已选择教师%d人</string>
    <string name="notice_parents_selected_number">已选择家长%d人</string>
    <string name="notice_un_confirm_number">未确认%d人</string>
    <string name="notice_un_read_number">未读%d人</string>
    <string name="notice_site">按场地</string>
    <string name="notice_brand">按班级</string>
    <string name="notice_brand_class_number">已选择教师%d人、家长%d人、班牌%d个</string>
    <string name="select_all">全选</string>
    <string name="privacy_tips">\t\t\t\t一加壹App重视用户的个人信息和隐私保护，我们依据最新的法律法规要求，更新制定了隐私政策，请您务必仔细阅读，充分理解 "用户协议" 和 "隐私政策" 各条件，包括但不限于:为了向您提供即时资讯、内容分享等服务，我们需要收集您的设备信息、操作日志等个人信息，您可以在“设置”中查看、变更、删除个人信息并管理你的授权。你可点击阅读《用户协议》和《隐私政策》了解详细信息。如您对协议内容有任何疑问、意见或建议，可通过客服与我们联系，如你同意并接受全部条款后，请点击“同意”开始接受我们的服务。</string>
    <string name="privacy_exit">不同意</string>
    <string name="privacy_agree">同意</string>
    <string name="open_push_notification_permission">开启推送通知</string>
    <string name="open_push_notification_tip">实时获取最新信息，不再错过\n重要通知。</string>
    <string name="open_immediately">立即开启</string>
    <string name="skip">跳过</string>
    <string name="click_right_button_get_register_code">点击右侧按钮获取注册码</string>
    <string name="get_register_code">获取注册码</string>
    <string name="click_right_button_get_active_code">点击右侧按钮获取激活码</string>
    <string name="get_active_code">获取激活码</string>
    <string name="enter_login">进入</string>
</resources>