<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F8FC"
    tools:context=".activity.leave.LeaveFlowDetailActivity">

    <include
        android:id="@+id/top"
        layout="@layout/title_layout2" />
    <androidx.constraintlayout.widget.Group
        android:id="@+id/gp_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="cl_active_code,cl_register_code,btn_enter"
        android:visibility="gone"/>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_register_code"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_44"
        android:layout_marginTop="@dimen/dp_10"
        android:background="#FFFFFF"
        app:layout_constraintTop_toBottomOf="@id/top">

        <TextView
            android:id="@+id/tv_register_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_16"
            android:text="@string/click_right_button_get_register_code"
            android:textColor="#ffbcc1cb"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_get_register_code"
            android:layout_width="@dimen/dp_80"
            android:layout_height="@dimen/dp_30"
            android:layout_marginEnd="@dimen/dp_15"
            android:background="@drawable/scan_login_btn_border_bg_shape"
            android:text="@string/get_register_code"
            android:textColor="#ff2c8aff"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_active_code"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_44"
        android:layout_marginTop="@dimen/dp_10"
        android:background="#FFFFFF"
        app:layout_constraintTop_toBottomOf="@id/cl_register_code">

        <TextView
            android:id="@+id/tv_active_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_16"
            android:text="@string/click_right_button_get_active_code"
            android:textColor="#ffbcc1cb"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_active_code"
            android:layout_width="@dimen/dp_80"
            android:layout_height="@dimen/dp_30"
            android:layout_marginEnd="@dimen/dp_15"
            android:background="@drawable/scan_login_btn_border_bg_shape"
            android:text="@string/get_active_code"
            android:textColor="#ff2c8aff"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/btn_enter"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_40"
        android:layout_marginEnd="@dimen/dp_16"
        android:background="@drawable/flow_pass_bg_shape"
        android:text="@string/enter_login"
        android:textColor="#ffffffff"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@id/cl_active_code" />
</androidx.constraintlayout.widget.ConstraintLayout>