<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_conrners_white_12"
    android:paddingLeft="10dp"
    android:paddingTop="10dp"
    android:paddingRight="10dp">

    <TextView
        android:id="@+id/tv_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="服务协议与隐私政策"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_privacy_tips"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:lineSpacingExtra="4dp"
        android:text="@string/privacy_tips"
        android:textColor="@color/black"
        android:textSize="@dimen/text_14"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_note" />

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="0.25dp"
        android:layout_marginTop="15dp"
        android:background="#C7C4C4"
        app:layout_constraintTop_toBottomOf="@id/tv_privacy_tips" />

    <LinearLayout
        android:id="@+id/layout_to_do"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/line">

        <Button
            android:id="@+id/btn_exit"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/white"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:text="@string/privacy_exit"
            android:textColor="#C7C4C4"
            android:textSize="16sp"
            android:textStyle="bold" />

        <View
            android:layout_width="0.25dp"
            android:layout_height="40dp"
            android:background="#C7C4C4" />

        <Button
            android:id="@+id/btn_enter"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/white"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:text="@string/privacy_agree"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>